--- a/hauntedhousescene.html
+++ b/hauntedhousescene.html
@@ -184,7 +184,7 @@
 
     <!-- All you need to put beautiful, interactive 3D content on your site: -->
 
-    <model-viewer src="./assets/the_pumpkin_mage.glb"
+    <model-viewer src="./assets/skeleton.glb"
 
                   ios-src="./assets/skeleton/scene.usdz"]
 
