--- a/hauntedhousescene.html
+++ b/hauntedhousescene.html
@@ -54,7 +54,7 @@
 
     <model-viewer src="./assets/halloween_haunted_house.glb"
 
-                  ios-src="./assets/halloween_haunted_house/scene.usdz"
+                  ios-src="./assets/halloween_haunted_house.usdz"
 
                   alt="A 3D model of a haunted house"
 
@@ -98,7 +98,7 @@
 
     <model-viewer src="./assets/spooky_ghost.glb"
 
-                  ios-src="./assets/spooky_ghost/scene.usdz"
+                  ios-src="./assets/spooky_ghost.usdz"
 
                   alt="A 3D model of a spooky ghost"
 
@@ -142,7 +142,7 @@
 
     <model-viewer src="./assets/the_pumpkin_mage.glb"
 
-                  ios-src="./assets/the_pumpkin_mage/scene.usdz"
+                  ios-src="./assets/the_pumpkin_mage.usdz"
 
                   alt="A 3D model of a pumpkin mage"
 
@@ -186,7 +186,7 @@
 
     <model-viewer src="./assets/skeleton.glb"
 
-                  ios-src="./assets/skeleton/scene.usdz"
+                  ios-src="./assets/skeleton.usdz"
 
                   alt="A 3D model of a skeleton"
 
